index#h1 size on mobile fix, pitch text mobile show

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,13 @@ footer p {
   }
 }
 
+@media (max-width: 460px) {
+  .headline>h1{
+    padding-top: 210px;
+    font-size: 55px;
+  }
+}
+
 /*------------------------------------*    MATERIAL PHOTO GALLERY
 \*------------------------------------*/
 .m-p-g {
